quorum/test/tests/templating/Fail/B_12.quorum
class B<Type> is a A<Type>

end